[workspace]
resolver = "2"
members = [
    'shared/packages',
    'shared/media-streaming-format',
    'moqt',
    'relay',
    'examples/rust/manual-client',
    'tests/cascading-relay-e2e',
    'examples/rust/fetch-e2e',
    'examples/cross-protocol-test/publisher',
    'examples/cross-protocol-test/quic-subscriber',
    'bindings/wasm',
    'bridges/live-ingest',
    'bridges/onvif',
]
