[workspace]
resolver = "2"
members = [
    'shared/packages',
    'shared/media-streaming-format',
    'moqt',
    'relay',
    'examples/rust/manual-client',
    'tests/cache-eviction-e2e',
    'tests/cascading-relay-e2e',
    'tests/fetch-e2e',
    'tests/multiple-publishers-e2e',
    'tests/object-dedup-e2e',
    'tests/priority-e2e',
    'examples/cross-protocol-test/publisher',
    'examples/cross-protocol-test/quic-subscriber',
    'bindings/wasm',
    'bridges/live-ingest',
    'bridges/onvif',
]
