[package]
name = "moqt-client-onvif"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
base64 = "0.22.1"
clap = { version = "4.5.21", features = ["derive"] }
crossterm = "0.27.0"
rand = "0.8.5"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls"] }
roxmltree = "0.19.0"
sha1 = "0.10.6"
time = { version = "0.3.36", features = ["formatting", "macros"] }
tokio = { version = "1.45.0", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
