[package]
name = "moqt-client-onvif"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
base64 = "0.22.1"
clap = { version = "4.5.21", features = ["derive"] }
env_logger = "0.11.6"
eframe = "0.27"
ffmpeg-next = "8.0.0"
log = "0.4.22"
moqt-client-rust = { path = "../moqt-client-rust" }
moqt-core = { path = "../moqt-core" }
media-streaming-format = { path = "../media-streaming-format" }
packages = { path = "../packages" }
rand = "0.8.5"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls"] }
roxmltree = "0.20.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
strum = { version = "0.26.3", features = ["derive"] }
time = { version = "0.3.36", features = ["formatting", "macros"] }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread", "sync"] }
wtransport = "0.6.0"
