[package]
name = "moqt-client-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
bytes = "1.5.0"
cfg-if = "1.0.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.64"
serde = { version = "1.0.188", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
moqt-core = {path = "../moqt-core"}
futures = "0.3.29"
anyhow = "1.0.75"
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3.64"
features = [
  'WebTransport',
  'WebTransportBidirectionalStream',
  'WebTransportSendStream',
  'WebTransportReceiveStream',
  'ReadableStreamDefaultReader',
  'WritableStreamDefaultWriter',
  'ReadableStream',
  'WritableStream',
]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(web_sys_unstable_apis)'] }
