[package]
name = "moqt-client-wasm"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
web_sys_unstable_apis = []
[dependencies]
bytes = "1.5.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.64"
serde = { version = "1.0.188", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
serde_json = "1.0.140"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
moqt-core = { path = "../moqt-core" }
media-streaming-format = { path = "../media-streaming-format" }
futures = "0.3.29"
anyhow = "1.0.75"



[dependencies.web-sys]
version = "0.3.64"
features = [
  'WebTransport',
  "WebTransportDatagramDuplexStream",
  'WebTransportBidirectionalStream',
  'WebTransportSendStream',
  'WebTransportReceiveStream',
  'ReadableStreamDefaultReader',
  'WritableStreamDefaultWriter',
  'ReadableStream',
  'WritableStream',
]



[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(web_sys_unstable_apis)'] }
