[package]
name = "moqt-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
bytes = "1"
num_enum = "0.7.0"
async-trait = "0.1.74"
serde = { version = "1.0.188", features = ["derive"] }
