[package]
name = "moqt-server-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
moqt-server = {path = "../moqt-server"}
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
clap = { version = "4.5.4", features = ["derive"] }


[features]
foo = []
