[package]
name = "moqt-server-sample"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
moqt-server = {path = "../moqt-server"}
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
clap = { version = "4.5.4", features = ["derive"] }


[profile.release]
opt-level = 3           # 高速化重視の最適化（デフォルトだが明示してOK）
lto = "fat"             # Link Time Optimization（全体最適化）
codegen-units = 1      # 単一ユニットでのコード生成（より最適化される）
incremental = false     # 増分コンパイル無効（最適化のため）
debug = false          # デバッグ情報除去（サイズ削減、ただし省略可能）
strip = "symbols"       # デバッグシンボルの除去（Rust 1.70+）
panic = "abort"         # パニック時に即終了（コードサイズ小・速度↑）