[package]
name = "moqt-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
moqt-core = {path = "../moqt-core"}
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
tracing = "0.1.37"
once_cell = "1.21.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
wtransport = { version = "0.6.1", features = ["quinn"] }
bytes = "1"
async-trait = "0.1.74"
ttl_cache = "0.5.1"
tracing-appender = "0.2.3"
