[package]
name = "moqt-server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
moqt-core = {path = "../moqt-core"}
tokio = { version = "1.45.0", features = ["full", "tracing"] }
console-subscriber = "0.4"
tracing = "0.1.37"
once_cell = "1.21.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
wtransport = { version = "0.6.1", features = ["quinn"] }
bytes = "1"
async-trait = "0.1.74"
ttl_cache = "0.5.1"
tracing-appender = "0.2.3"

[profile.release]
opt-level = 3           # 高速化重視の最適化（デフォルトだが明示してOK）
lto = "fat"             # Link Time Optimization（全体最適化）
codegen-units = 1      # 単一ユニットでのコード生成（より最適化される）
incremental = false     # 増分コンパイル無効（最適化のため）
debug = false           # デバッグ情報除去（サイズ削減、ただし省略可能）
strip = "symbols"       # デバッグシンボルの除去（Rust 1.70+）
panic = "abort"         # パニック時に即終了（コードサイズ小・速度↑）