[package]
name = "moqt"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
tokio = { version = "1.45.0", features = ["full", "tracing"] }
console-subscriber = "0.4"
tracing = "0.1.37"
once_cell = "1.21.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
quinn = "0.11.8"
bytes = "1"
async-trait = "0.1.74"
ttl_cache = "0.5.1"
tracing-appender = "0.2.3"
serde = { version = "1.0.188", features = ["derive"] }
num_enum = "0.7.0"
mockall="0.13.1"
rustls-native-certs="0.8.1"
thiserror = "2.0.16"

[dev-dependencies]
rcgen = "0.14.3"