[package]
name = "moqt"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
tracing = "0.1.44"
once_cell = "1.21.4"
bytes = "1"
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
num_enum = "0.7.6"
mockall="0.14.0"
thiserror = "2.0.18"
url = "2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
console-subscriber = "0.5"
quinn = "0.11.9"
rustls-native-certs = "0.8.4"
rustls-pemfile = "2.2.0"
tokio = { version = "1.52.3", features = ["full", "tracing"] }
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
ttl_cache = "0.5.1"
web-transport-quinn = { version = "0.11", default-features = false, features = ["ring"] }

[dev-dependencies]
rcgen = "0.14.8"
