[package]
name = "server-sample"
version = "0.1.0"
edition = "2024"

[dependencies]
moqt = {path = "../moqt"}
tokio = { version = "1.45.0", features = ["full", "tracing"] }
anyhow = { version = "1.0.75", features = ["backtrace"] }
tracing = "0.1.37"
rcgen = "0.14.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }