[package]
name = "moqt-client-wasm"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
web_sys_unstable_apis = []
[dependencies]
bytes = "1.11.1"
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.100"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.150"
wasm-bindgen = "0.2.123"
wasm-bindgen-futures = "0.4.73"
moqt = { path = "../../moqt" }
packages = { path = "../../shared/packages" }
media-streaming-format = { path = "../../shared/media-streaming-format" }
futures = "0.3.32"
anyhow = "1.0.102"



[dependencies.web-sys]
version = "0.3.100"
features = [
  'WebTransport',
  "WebTransportDatagramDuplexStream",
  'WebTransportBidirectionalStream',
  'WebTransportSendStream',
  'WebTransportReceiveStream',
  'ReadableStreamDefaultReader',
  'WritableStreamDefaultWriter',
  'ReadableStream',
  'WritableStream',
]



[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(web_sys_unstable_apis)'] }
