[package]
name = "moqt-bridge-onvif"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.10"
eframe = "0.35"
ffmpeg-next = "8.1.0"
log = "0.4.32"
moqt = { path = "../../moqt" }
media-streaming-format = { path = "../../shared/media-streaming-format" }
packages = { path = "../../shared/packages" }
rand = "0.10.1"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls"] }
roxmltree = "0.21.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha1 = "0.11.0"
strum = { version = "0.28.0", features = ["derive"] }
time = { version = "0.3.47", features = ["formatting", "macros"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "sync", "io-util"] }
url = "2.5.8"
