[package]
name = "cascading-relay-e2e"
version = "0.1.0"
edition = "2024"

[dependencies]
moqt = { path = "../../moqt" }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
anyhow = { version = "1.0.102", features = ["backtrace"] }
bytes = "1"
url = "2.5.8"
redis = { version = "1.2.2", features = ["tokio-comp", "connection-manager"] }
