[package]
name = "quic-subscriber"
version = "0.1.0"
edition = "2024"

[dependencies]
moqt = { path = "../../../moqt" }
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
anyhow = { version = "1.0.75", features = ["backtrace"] }
bytes = "1"
url = "2.5.7"
