[package]
name = "manual-client"
version = "0.1.0"
edition = "2024"

[dependencies]
moqt = { path = "../../../moqt" }
tokio = { version = "1.52.3", features = ["full", "tracing"] }
tracing = "0.1.44"
async-trait = "0.1.89"
anyhow = { version = "1.0.102", features = ["backtrace"] }
url = "2.5.8"
rcgen = "0.14.8"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
