[package]
name = "moq-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "moq-cli"
path = "src/main.rs"

[dependencies]
moqt = { path = "../../../moqt" }
media-streaming-format = { path = "../../../shared/media-streaming-format" }
packages = { path = "../../../shared/packages" }
serde_json = "1"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
anyhow = { version = "1.0.102", features = ["backtrace"] }
bytes = "1"
url = "2.5.8"
clap = { version = "4.6.1", features = ["derive"] }
